--- a/index.html
+++ b/index.html
@@ -105,12 +105,29 @@
                     <li><span>Address</span> : pune maharashtra</li>
                     <li><span>Education</span>: Bachelor of Computer Science and Engineering</li>
                 </ul>
-                <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
-                </ul>  
+               <ul class="social-icons pt-3">
+                    <li class="social-item">
+                    <a class="social-link" href="https://linkedin.com/in/samarth-sabale-75ba76315" target="_blank">
+                    <i class="ti-linkedin" aria-hidden="true"></i>
+                    </a>
+                    </li>
+                    <li class="social-item">
+                    <a class="social-link" href="https://www.google.com/" target="_blank">
+                    <i class="ti-google" aria-hidden="true"></i>
+                    </a>
+                    </li>
+                    <li class="social-item">
+                    <a class="social-link" href="https://www.instagram.com/samarthsable2526" target="_blank">
+                    <i class="ti-instagram" aria-hidden="true"></i>
+                    </a>
+                    </li>
+                    <li class="social-item">
+                    <a class="social-link" href="https://github.com/whitedevil2526" target="_blank">
+                    <i class="ti-github" aria-hidden="true"></i>
+                    </a>
+                    </li>
+                </ul>
+
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">My Expertise</h3>
