--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </ul>
                <ul class="social-icons pt-3">
                     <li class="social-item">
-                    <a class="social-link" href="https://linkedin.com/in/samarth-sabale-75ba76315" target="_blank">
+                    <a class="social-link" href="https://www.linkedin.com/in/samarth-sabale-75ba76315/" target="_blank">
                     <i class="ti-linkedin" aria-hidden="true"></i>
                     </a>
                     </li>
@@ -117,7 +117,7 @@
                     </a>
                     </li>
                     <li class="social-item">
-                    <a class="social-link" href="https://www.instagram.com/samarthsable2526" target="_blank">
+                    <a class="social-link" href="https://www.instagram.com/samarthsable2526/" target="_blank">
                     <i class="ti-instagram" aria-hidden="true"></i>
                     </a>
                     </li>
