--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <ul class="social-icons pt-3">
                 <li class="social-item">
-                    <a class="social-link text-light" href="linkedin.com/in/samarth-sabale-75ba76315" target="_blank">
+                    <a class="social-link text-light" href="https://www.linkedin.com/in/samarth-sabale-75ba76315/" target="_blank">
                         <i class="ti-linkedin" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li class="social-item">
-                    <a class="social-link text-light" href="https://instagram.com/your-profile" target="_blank">
+                    <a class="social-link text-light" href="https://www.instagram.com/samarthsable2526/" target="_blank">
                         <i class="ti-instagram" aria-hidden="true"></i>
                     </a>
                 </li>
