--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </a>
                 </li>
                 <li class="social-item">
-                    <a class="social-link text-light" href="https://www.google.com/" target="_blank">
+                    <a class="social-link text-light" href="https://www.google.com/samarthsable2907@gmail.com" target="_blank">
                         <i class="ti-google" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -112,7 +112,7 @@
                     </a>
                     </li>
                     <li class="social-item">
-                    <a class="social-link" href="https://www.google.com/" target="_blank">
+                    <a class="social-link" href="https://www.google.com/samarthsable2907@gmail.com" target="_blank">
                     <i class="ti-google" aria-hidden="true"></i>
                     </a>
                     </li>
@@ -435,7 +435,7 @@
     <!-- Google mpas -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script>
 
-    <!-- JohnDoe js -->
+    <!-- samarth sabale js -->
     <script src="assets/js/script.js"></script>
 
 </body>
